# tfgrid_graphql

./: .gitignore  Cargo.toml  README.md  index.html  trunk.toml
.github/workflows/: pages.yml  release.yml  rust.yml
src/: app.rs  bill_report.rs  charts.rs  compat.rs  consumption.rs  contract.rs  graphql.rs  lib.rs  main.rs  uptime.rs
