[package]
name = "tfgrid_graphql"
version = "0.1.0"
edition = "2021"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
description = "CLI to extract data related to the ThreeFold Grid from a GraphQL server."
readme = "README.md"
repository = "https://github.com/LeeSmet/tfgrid_graphql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["openssl/vendored"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
prettytable-rs = "0.9"
