[package]
name = "tfgrid_graphql"
version = "0.1.0"
edition = "2021"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
description = "CLI to extract data related to the ThreeFold Grid from a GraphQL server."
readme = "README.md"
repository = "https://github.com/LeeSmet/tfgrid_graphql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["openssl/vendored"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
prettytable-rs = "0.10"
eframe = { version = "0.22.0", default-features = false, features = [
  "default_fonts",
  "glow",
] }
log = "0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 3
